fea: Add validate Middleware to validate input
